# hq-x

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  AUDIT_CLICKHOUSE_QUERY_AND_MULTICHANNEL_ANALYTICS.md  AUDIT_RUDDERSTACK_CLICKHOUSE_PORT.md  CLAUDE.md  DIRECTIVE_EMAILBISON_API_MCP_INVESTIGATION.md  DIRECTIVE_HQX_ANALYTICS_BUILDOUT.md  DIRECTIVE_HQX_ANALYTICS_REMAINDER.md  DIRECTIVE_HQX_DMAAS_FOUNDATION.md  DIRECTIVE_HQX_DMAAS_HOSTED_PAGES.md  DIRECTIVE_HQX_DMAAS_ORCHESTRATION.md  DIRECTIVE_HQX_VOICE_PORT_REVIEW.md  DIRECTIVE_LOB_MAILER_SPECS_V2_HANDOFF.md  Dockerfile  HANDOFF_VOICE_PORT.md  HQ_COMMAND_API_REFERENCE.md  Makefile  README.md  REVIEW_FINDINGS.md  STATE_OF_HQ_X.md  docker-entrypoint.sh  package-lock.json  package.json  pyproject.toml  railway.toml  trigger.config.ts  tsconfig.json
app/: clickhouse.py  config.py  db.py  main.py  rudderstack.py
data/: dmaas_seed_scaffolds.json  dmaas_strategies.json  dmaas_v1_scaffolds.json  lob_mailer_specs.json
data-test/: dat-clay-company-enrichment.json  dat-claygent-1.json  dat-claygent-2.json
docs/: HANDOFF_GTM_PIPELINE_2026-05-01.md  analytics-buildout-pr-notes.md  campaign-model-pr-notes.md  campaign-model.md  campaign-rename-pr-notes.md  dmaas-backend-overview.md  dmaas-foundation-handoff.md  dmaas-foundation-pr-notes.md  dmaas-hosted-pages-pr-notes.md  dmaas-orchestration-pr-notes.md  emailbison-api-mcp-coverage.md  entri-integration.md  entri-runbook.md  gtm-model-pr-notes.md  gtm-model.md  handoff-gtm-pipeline-foundation-2026-05-01.md  handoff-pre-payment-pipeline-2026-04-30.md  lob-integration.md  strategic-direction-owned-brand-leadgen.md  tenancy-migration-pr-notes.md  tenancy-model.md  tenancy-state.md
migrations/: 0001_business_users.sql  0002_brands.sql  0002_direct_mail_lob.sql  0003_partners.sql  0004_campaigns.sql  0005_voice_base.sql  0006_trust_hub_registrations.sql  0007_sms.sql  0008_ivr.sql  0009_voice_ai_extras.sql  0010_webhook_events.sql  0011_voice_callback_inbound_link.sql  0012_fmcsa_ivr_seed.sql  0013_vapi_outbound_idempotency.sql  0014_accounts_contacts.sql  0015_audience_drafts.sql  0016_lob_mailer_specs.sql  0017_lob_mailer_specs_seed.sql  0018_dmaas_scaffolds_designs.sql  0019_dmaas_dub_links.sql  0019_lob_specs_v2_zones.sql  0020_dmaas_dub_events.sql  0020_organizations_tenancy.sql  0021_gtm_motions_and_campaigns.sql  0022_rename_campaigns_hierarchy.sql  0023_channel_campaign_steps.sql  20260429T000000_dmaas_scaffold_strategy.sql  20260429T120000_recipients.sql  20260429T180000_entri_domain_connections.sql  (+28 more)
scripts/: migrate.py  (+18 more)
(+380 files in other folders)
